--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,6 +31,37 @@ nav {
   color: #fff !important;
 }
 
+.topDiv {
+  min-height: 75vh;
+  background-image: url("../images/car-thept.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: inset 0 0 0 50vw rgba(14, 8, 11, 0.719);
+}
+
+.topDiv h4 {
+  margin: 0 0 0 20%;
+}
+
+.searchForm {
+  min-width: 375px;
+  width: 500px;
+  border-radius: 20px;
+  background-color: rgba(17, 17, 17, 0.733);
+  min-height: 40vh;
+}
+
+.topDiv h1 {
+  font-size: 70px;
+  margin: 0 25%;
+}
+
+.submit {
+  background-color: #C65102;
+  width: 98%;
+  margin: 0 auto;
+}
+
 footer ul li {
   list-style-type: none;
   padding: 0 10px;
