--- a/static/css/registration.css
+++ b/static/css/registration.css
@@ -60,62 +60,12 @@
         background-color: rgba(17, 17, 17, 0.411);
     }
     
-    .form-control {
-        display: inline;
-        width: 40%;
-        padding: .375rem .75rem;
-        margin-left: 60px;
-        margin-top: 30px;
-        font-size: 1rem;
-        font-weight: 400;
-        line-height: 1.5;
-        color: #212529;
-        background-color: #c4c4c4;
-        background-clip: padding-box;
-        border: 1px solid #ced4da;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        border-radius: .25rem;
-        transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    .form-group input {
+        margin: 10px;
+        width: 90%;
+        padding-bottom: 3vh;
     }
     
-    #nis .form-control {
-        display: block;
-        width: 86%;
-        padding: .375rem .75rem;
-        margin-left: 60px;
-        margin-top: 30px;
-        font-size: 1rem;
-        font-weight: 400;
-        line-height: 1.5;
-        color: #212529;
-        background-color: #c4c4c4;
-        background-clip: padding-box;
-        border: 1px solid #ced4da;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        border-radius: .25rem;
-        transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-    }
-    
-    #upi .form-control {
-        display: block;
-        width: 20%;
-        padding: .375rem .75rem;
-        margin-left: 60px;
-        margin-top: 30px;
-        font-size: 1rem;
-        font-weight: 400;
-        line-height: 1.5;
-        color: #212529;
-        background-color: #c4c4c4;
-        background-clip: padding-box;
-        border: 1px solid #ced4da;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        border-radius: .25rem;
-        transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    #admire {
+        margin: 5px;
     }
