add minor adjustments on the contact form

--- a/static/css/registration.css
+++ b/static/css/registration.css
@@ -2,49 +2,49 @@
         padding: 0;
         margin: 0;
     }
-    
+
     body {
         font-family: 'Spectral', cursive;
         min-height: 100vh;
         background-color: #111;
     }
-    
+
     nav {
         background-color: rgba(17, 17, 17, 0.438);
     }
-    
+
     .logo {
         font-size: 30px;
         font-family: 'Lobster', cursive;
     }
-    
+
     .orange {
         color: #C65102 !important;
     }
-    
+
     .list li {
         padding: 0 5px;
     }
-    
+
     .list li a {
         font-size: 25px;
         color: #fff !important;
     }
-    
+
     .list li {
         padding: 0 5px;
     }
-    
+
     .list li a {
         font-size: 25px;
         color: #fff !important;
     }
-    
+
     footer ul li {
         list-style-type: none;
         padding: 0 10px;
     }
-    
+
     #date {
         background-image: url("../images/bg2.jpg");
         background-size: cover;
@@ -54,18 +54,20 @@
         box-shadow: inset 0 0 0 50vw rgba(14, 8, 11, 0.719);
         margin-top: 10px;
     }
-    
+
     .tool {
         min-height: 60vh;
         background-color: rgba(17, 17, 17, 0.411);
     }
-    
+
+    .form-group {}
+
     .form-group input {
-        margin: 10px;
-        width: 90%;
+        margin: 10px auto;
+        width: 50%;
         padding-bottom: 3vh;
     }
-    
+
     #admire {
         margin: 5px;
     }
